# ntstat2

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.in  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  interfaces.h  main.c  raw_dump.c  raw_dump.h  speed.h  stdout_dump.c  stdout_dump.h  timer.c  timer.h
src/linux/: interfaces.c  sysfs_reader.c  sysfs_reader.h
